<resources>
    <string name="app_name">LiteraSearchApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun_daftar_disini">Belum punya akun? Daftar disini</string>
    <string name="lupa_sandi">Lupa Sandi?</string>
    <string name="dapatkan_email">Dapatkan Email</string>
    <string name="masukkan_alamat_email_anda_untuk_melakukan_reset_ulang_password">Masukkan alamat email anda untuk melakukan reset ulang password</string>
    <string name="lupa_password">LUPA PASSWORD</string>
    <string name="perpustakaan">Perpustakaan</string>
    <string name="buku">Buku</string>
    <string name="profil">Profil</string>
    <string name="nama_buku">Harry Potter</string>
    <string name="nama_author">J.K. Rowling</string>
    <string name="populer">Populer</string>
    <string name="trending">Trending</string>
    <string name="buku_lainnya">Buku Lainnya</string>
</resources>